--- a/pom.xml
+++ b/pom.xml
@@ -490,6 +490,16 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-jxr-plugin</artifactId>
                         <version>2.1</version>
+                        <repository>
+<id>dev-azure-com-kaliraja1992-mvn_artifacts</id>
+<url>https://pkgs.dev.azure.com/kaliraja1992/_packaging/mvn_artifacts/maven/v1</url>
+<releases>
+<enabled>true</enabled>
+</releases>
+<snapshots>
+<enabled>true</enabled>
+</snapshots>
+</repository>
                     </plugin>
                 </plugins>
             </reporting>
