--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
         <jelastic.environment>wakaleo</jelastic.environment>
     </properties>
     
-    <repository>
+   <repositories>
+     <repository>
         <id>dev-azure-com-kaliraja1992-mvn_artifacts</id>
         <url>https://pkgs.dev.azure.com/kaliraja1992/_packaging/mvn_artifacts/maven/v1</url>
         <releases>
@@ -30,7 +31,8 @@
         <snapshots>
            <enabled>true</enabled>
         </snapshots>
-    </repository>
+     </repository>
+   </repositories>    
     
     <scm>
         <connection>scm:git:git@github.com:${github.account}/game-of-life.git</connection>
