--- a/pom.xml
+++ b/pom.xml
@@ -505,6 +505,18 @@
           <snapshots>
             <enabled>true</enabled>
           </snapshots>
-          </repository>
-    </repositories>   
+        </repository>
+    </repositories> 
+    <distributionManagement>
+        <repository>
+          <id>dev-azure-com-kaliraja1992-mvn_artifacts</id>
+          <url>https://pkgs.dev.azure.com/kaliraja1992/_packaging/mvn_artifacts/maven/v1</url>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+        </repository> 
+    </distributionManagement>  
 </project>
